# deepseek_nvidia

./: .gitignore  Makefile  README.md  cls_deepseek_nvidia.py  execute_queries.py  pyproject.toml  queries.py  query.py  requirements.txt  setup_development_environment.source  source-setup.sh
data/: private_prompts.toml  prompts.yaml  public_prompts.toml  public_prompts.yaml
deepseek_nvidia/: send_prompts.py
deepseek_nvidia/classes/: deepseek_nvidia.py  prompt.py
